# class-based-views-terry-cross

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
home/: admin.py  forms.py  models.py  urls.py  views.py
home/templates/: about.html  base.html  model_form_upload.html  others.html  simple_upload.html
posts/: forms.py  models.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20211012_1034.py
templates/: generic_form.html  index.html  navbar.html  post_detail.html  user_detail.html
